--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Currency Convertor</string>
+    <string name="exit">Exit</string>
+    <string name="compare_all_currencies">Compare all Currencies</string>
+    <string name="title_activity_compare">CompareActivity</string>
 </resources>
